fix: added max-width 500p to .nameAndTitle h1 selector to prevent layout shift for long names

--- a/src/TemplateSimple.module.css
+++ b/src/TemplateSimple.module.css
@@ -145,6 +145,10 @@
 
 }
 
+.nameAndTitle h1 {
+  max-width: 500px;
+}
+
 .title {
   font-size: 0.9em;
   color: var(--color-primary);
